Added font-family and size and weight

--- a/index.html
+++ b/index.html
@@ -11,7 +11,12 @@
       sizes="32x32"
       href="./images/favicon-32x32.png"
     />
-
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;600&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./design/css-reset.css" />
     <link rel="stylesheet" href="./design/styles.css" />
 
@@ -20,8 +25,8 @@
   <body>
     <main>
       <section>
-        <h1>Reliable, efficient delivery</h1>
-        <h2>Powered by Technology</h2>
+        <h1 id="firstHeading">Reliable, efficient delivery</h1>
+        <h1 id="secondHeading">Powered by Technology</h1>
         <p>
           Our Artificial Intelligence powered tools use millions of project data
           points to ensure that your project is successful
