Added some alignment to each content section

--- a/index.html
+++ b/index.html
@@ -24,30 +24,33 @@
   </head>
   <body>
     <main>
-      <section>
+      <header>
         <h1 id="firstHeading">Reliable, efficient delivery</h1>
         <h1 id="secondHeading">Powered by Technology</h1>
         <p>
           Our Artificial Intelligence powered tools use millions of project data
           points to ensure that your project is successful
         </p>
-      </section>
+      </header>
       <section>
-        <article>
+        <article class="leftSide">
           <h3>Supervisor</h3>
           <p>Monitors activity to identify project roadblocks</p>
         </article>
-        <article>
-          <h3>Team Builder</h3>
-          <p>
-            Scans our talent network to create the optimal team for your project
-          </p>
-        </article>
-        <article>
-          <h3>Karma</h3>
-          <p>Regularly evaluates our talent to ensure quality</p>
-        </article>
-        <article>
+        <div class="middle">
+          <article>
+            <h3>Team Builder</h3>
+            <p>
+              Scans our talent network to create the optimal team for your
+              project
+            </p>
+          </article>
+          <article>
+            <h3>Karma</h3>
+            <p>Regularly evaluates our talent to ensure quality</p>
+          </article>
+        </div>
+        <article class="rightSide">
           <h3>Calculator</h3>
           <p>
             Uses data from past projects to provide better delivery estimates
