Moved the cards to their own divs with grid layout styling

--- a/index.html
+++ b/index.html
@@ -37,19 +37,18 @@
           <h3>Supervisor</h3>
           <p>Monitors activity to identify project roadblocks</p>
         </article>
-        <div class="middle">
-          <article>
-            <h3>Team Builder</h3>
-            <p>
-              Scans our talent network to create the optimal team for your
-              project
-            </p>
-          </article>
-          <article>
-            <h3>Karma</h3>
-            <p>Regularly evaluates our talent to ensure quality</p>
-          </article>
-        </div>
+
+        <article class="middleTop">
+          <h3>Team Builder</h3>
+          <p>
+            Scans our talent network to create the optimal team for your project
+          </p>
+        </article>
+        <article class="middleBottom">
+          <h3>Karma</h3>
+          <p>Regularly evaluates our talent to ensure quality</p>
+        </article>
+
         <article class="rightSide">
           <h3>Calculator</h3>
           <p>
