Adjusted margin positions for card layouts and apply font and card styles

--- a/index.html
+++ b/index.html
@@ -33,23 +33,26 @@
         </p>
       </header>
       <section>
-        <article class="leftSide">
+        <article class="card leftSide">
           <h3>Supervisor</h3>
           <p>Monitors activity to identify project roadblocks</p>
         </article>
 
-        <article class="middleTop">
-          <h3>Team Builder</h3>
-          <p>
-            Scans our talent network to create the optimal team for your project
-          </p>
-        </article>
-        <article class="middleBottom">
-          <h3>Karma</h3>
-          <p>Regularly evaluates our talent to ensure quality</p>
-        </article>
+        <div class="middle">
+          <article class="card middleTop">
+            <h3>Team Builder</h3>
+            <p>
+              Scans our talent network to create the optimal team for your
+              project
+            </p>
+          </article>
+          <article class="card middleBottom">
+            <h3>Karma</h3>
+            <p>Regularly evaluates our talent to ensure quality</p>
+          </article>
+        </div>
 
-        <article class="rightSide">
+        <article class="card rightSide">
           <h3>Calculator</h3>
           <p>
             Uses data from past projects to provide better delivery estimates
